padding for mobile change

--- a/score.css
+++ b/score.css
@@ -30,7 +30,7 @@ h1{
 
 .versus{
     font-size: .65em;
-    padding: 0em 2em;
+    padding: 0em .55em;
 }
 #reset-btn{
     background-color: #cf7623;
