--- a/styles.css
+++ b/styles.css
@@ -41,16 +41,19 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
 body{
     font-family: 'Lexend', 'Trebuchet MS', sans-serif;
     font-weight: 300;
 }
+
 h1{
     font-family: 'Julius Sans One', sans-serif;
     font-weight: 700;
     font-size: 3em;
     padding-top: 1rem;
 }
+
 h2{
     font-family: 'Julius Sans One', sans-serif;
     font-weight: 400;
@@ -63,22 +66,47 @@ header {
     text-align: center;
 }
 
-.card{
-    align-self: center;
-    margin: 2rem;
+.cardrow{
+    display: block;
+    width: auto;
 }
+
+.card{
+    text-align: center;
+    margin: 2rem;
+    box-shadow: .5em .5em .5em rgb(56, 60, 77);
+    
+}
+
 .card-title{
     font-family: 'Julius Sans One', sans-serif;
     padding: 1rem;
+  text-shadow: 1px 1px 1px rgb(56, 60, 77); 
 }
+
 .card-text{
     font-weight: 100;
     padding-bottom: 1.5rem;
 }
 
-.btn{
+.card-btn{
     background-color: rgb(7, 99, 116);
     color: white;
     box-shadow: .5em .5em .5em rgb(56, 60, 77);
-    
+}
+
+p{
+    line-height: 1.5em;
+}
+
+.card-img-top {
+    width: 100%;
+    height: 5em;
+    object-fit: cover;}
+
+.card-footer{
+    background-color: white;
+}
+p.intro{
+    margin-left: 2em;
 }
