--- a/css/cards.css
+++ b/css/cards.css
@@ -1,36 +1,45 @@
-
 /* CARDS MAIN */
-.cardrow{
+h2 {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+.cardrow {
   display: block;
   width: auto;
   padding-bottom: 5rem;
 }
-.card{
+.card {
   text-align: center;
   margin: 2rem;
   box-shadow: 0 1rem 1rem -1rem rgb(56, 60, 77);
 }
-.card-title{
+.card-title {
   font-family: 'Julius Sans One', sans-serif;
   padding: 1rem;
-  text-shadow: 0px 1px 1.5px rgba(0, 0, 0, 0.4); 
+  text-shadow: 0px 1px 1.5px rgba(0, 0, 0, 0.4);
 }
-.card-text{
+.card-text {
   font-weight: 200;
   padding-bottom: 1.5rem;
 }
-.card-btn{
-  background-color:#879296;
-  color: #FFF;
+.card-btn {
+  background-color: #5b7772;
+  color: #fff;
   box-shadow: 0 1rem 1rem -1rem rgb(56, 60, 77);
 }
-.card-btn:hover{
-  background-color: #3bbaaf80;
+.card-btn:hover {
+  background-color: #40c9bd80;
   color: #000;
-  transition: all .35s ease-in-out;
+  transition: all 0.35s ease-in-out;
 }
-.card-btn:focus, .card-btn:focus::after, .card-btn:focus::before{
-  background-color:#3bbaaf80;
+.card-btn:focus,
+.card-btn:focus::after,
+.card-btn:focus::before {
+  background-color: #40c9bd80;
   color: #000;
   box-shadow: 0 1rem 1rem -1rem rgb(56, 60, 77);
   border: none;
@@ -40,6 +49,6 @@
   height: 5em;
   object-fit: cover;
 }
-.card-footer{
+.card-footer {
   background-color: #fff;
 }
