--- a/css/about.css
+++ b/css/about.css
@@ -6,6 +6,9 @@
   margin-bottom: 2rem;
   font-weight: 300;
 }
+header .buttons {
+  margin: 0 1em;
+}
 .heading__secondary {
   text-align: center;
   text-transform: uppercase;
@@ -38,9 +41,10 @@
   text-transform: uppercase;
 }
 .trophies-container {
-  display: flexbox;
+  display: flex;
+  flex-direction: column;
   text-align: center;
-  padding: 2rem 0;
+  padding: 2rem 0.5em;
   background-color: #cccccc99;
 }
 
@@ -53,7 +57,6 @@
   margin-bottom: 1rem;
 }
 .card {
-  padding: 0 1.5rem;
   margin: 0.75rem;
 }
 .list a:link,
