--- a/css/styles.css
+++ b/css/styles.css
@@ -261,12 +261,12 @@ p {
   background-size: cover;
   background-position: top;
 }
-.saplants {
+.palette {
   background-image: linear-gradient(
       rgba(255, 255, 255, 0.8),
       rgba(255, 255, 255, 0.8)
     ),
-    url(../imgs/saplants.jpeg);
+    url(../imgs/palette.avif);
   background-size: cover;
   background-position: top;
 }
